@@ -123,6 +123,7 @@ $wgIgnoredMessages = array(
 	'pubmedurl',
 	'randompage-url',
 	'recentchanges-url',
+	'recentchangestext',
 	'revision-info-current',
 	'revision-nav',
 	'rfcurl',
